# AprilTag-AI-Detector

./: .gitignore  README.md  desktop.ini  metadata.json  package-lock.json  server.ts
android-project/: README.md  settings.gradle.kts
android-project/app/: build.gradle.kts  proguard-rules.pro
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/cpp/: CMakeLists.txt  apriltag_native.cpp
android-project/app/src/main/java/com/apriltag/aidetector/: MainActivity.kt
android-project/app/src/main/java/com/apriltag/aidetector/data/: ScanHistory.kt
android-project/app/src/main/java/com/apriltag/aidetector/ui/screens/: HistoryScreen.kt  LearningScreen.kt  ScannerScreen.kt
android-project/app/src/main/java/com/apriltag/aidetector/ui/theme/: Theme.kt
android-project/app/src/main/java/com/apriltag/aidetector/utils/: AprilTagImageAnalyzer.kt
src/: App.tsx  index.css  types.ts
src/data/: learningModules.ts
